[package]
name = "ledger_discount_brute"
version = "0.1.0"
authors = ["Sanjay K <sanjaykdragon@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.3.0"
ureq = { version = "0.12.0", features = ["json"] }